nafura-platform/ops/k8s/overlays/infra/prod/patch-keycloak-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
          image: 54.36.183.106:30500/nafura/nafura-keycloak:prod
